// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root"
        >
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
        >
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <input
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root FormLabel-disabled"
        >
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
        >
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <input
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root"
        >
          <span
            class="FormLabel-asterisk"
          >
            *
          </span>
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
        >
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <input
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel requried and disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root FormLabel-disabled"
        >
          <span
            class="FormLabel-asterisk"
          >
            *
          </span>
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
        >
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <input
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;
